k8s/classic/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe
  namespace: tic-tac-toe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      labels:
        app: tic-tac-toe
    spec:
      containers:
      - name: tic-tac-toe
        image: tic-tac-toe-ynov:latest
        imagePullPolicy: IfNotPresent
        stdin: true
        tty: true
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          exec:
            command: ["cat", "tic_tac_toe.py"]
          initialDelaySeconds: 5
        readinessProbe:
          exec:
            command: ["cat", "tic_tac_toe.py"]
          initialDelaySeconds: 5
