k8s/classic/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe
  namespace: tic-tac-toe
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: tic-tac-toe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tic-tac-toe
                port:
                  number: 80
